# 314-studio

./: .gitignore  AGENTS.md  DOUBLE_CONNECTION_FIX.md  FIX_SUMMARY.md  README.backend.md  README.frontend.md  README.md  TODO.md  TODOS.md  main.py  package.json  pyproject.toml  ruff.toml  ty.toml
.github/: CODEOWNERS
backend/: integration_test_api.py  pyproject.toml
backend/app/: core.utils.py  main.py  session_manager.py
backend/app/api/: __init__.py  chat.py  files.py  model.py  project.py  session.py  test_api.py
backend/app/schemas/: __init__.py
docs/: backend_status.md  bevy-0.18-deep-extracts.md  bevy-0.18-knowledge-base.md  fastapi-react-pi-integration-plan.md  final_workflow.md  implementation_summary.md  pi-rpc-knowledgebase.md  pi-session-model-knowledge-base.md  websocket-loop-analysis.md
docs/copilotkit/: README.md  agents.md  architecture.md  installation.md  plugins.md
docs/design/: integration-test-plan.md
docs/kb/: ws-harness-knowledge-base.md
frontend/: index.html
frontend/src/components/: ChatPanel.tsx  FilePreview.tsx  ProjectTree.tsx  components.css
frontend/src/hooks/: useModels.ts  (+1 more)
sample-copilotkit-python/: README.md  copilotkit-config.json  pyproject.toml  sample_agents.json
sample-copilotkit-python/.pi-lens/: turn-state.json
sample-copilotkit-python/mypyapp/: main.py  pyproject.toml
sample-copilotkit-python/mypyapp/.pi-lens/: turn-state.json
sample-copilotkit-python/tests/: test_copilotkit.py
tests/: .gitignore  TODOS.md  __init__.py  conftest.py  integration_test_harness.py  pyproject.toml  test_flow1_browse_chat.py  test_flow2_file_browse.py  test_flow3_multi_session.py  test_flow4_model_switch.py  test_flow5_close_delete.py  test_flow6_error_handling.py  test_flow7_shutdown_cleanup.py  test_flow8_model_operations.py  test_rpc_protocol.md  test_utils.py
tests/ws_harness/: __init__.py  __main__.py  colors.py  config.py  flow.py  http_client.py  project_resolver.py  ws_client.py
(+8 files in other folders)
