[project]
name = "314-studio"
version = "0.1.0"
description = "Browser workspace for the Pi coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiofiles>=24.1.0",
  "pydantic>=2.8.0",
  "httpx>=0.28.1",
  "pytest>=9.0.3",
]

[dependency-groups]
dev = ["ruff>=0.11.0", "ty>=0.0.31"]
