[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "copilotkit-python-sample"
version = "0.1.0"
description = "Sample CopilotKit application using Python 3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

[keywords]
ai = ["copilotkit", "agents", "chat", "assistant"]

[tool.hatch.build.targets.wheel]
packages = ["mypyapp"]

[tool.uv]
dev-dependencies = [
    "requests>=2.31.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "Q", "B", "C4", "T20", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore warnings for external libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "requests.*"
]
ignore_missing_imports = true

[project.scripts]
copilotkit-python-sample = "mypyapp.main:main"
